@END Project v3 Add focus & blur event - Fix focus visible outline

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ div.my-carousel-container{
     /* background-color: aquamarine; */
 }
 
+div.my-carousel-container:focus-visible {
+    outline: 0;
+}
+
 div.my-carousel-images{
     /* background-color: cadetblue; */
     height: 540px;
